--- a/Calculator.html
+++ b/Calculator.html
@@ -1,10 +1,10 @@
 <html>
 	<head>
 		<script src="http://code.jquery.com/jquery-latest.min.js"></script>
-		<script src="parser.js"></script>
-		<script src="calculator.js"></script>
+		<script src="libs/parser.js"></script>
+		<script src="libs/calculator.js"></script>
 	
-		<link rel="stylesheet" href="calculator.css">
+		<link rel="stylesheet" href="libs/calculator.css">
 		<style>
 			.parameter {
 				display: none;
