--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<script src="http://code.jquery.com/jquery-latest.min.js"></script>
-		<script src="parser.js"></script>
+		<script src="libs/parser.js"></script>
 	
 		<style>
 			.parameter {
