--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 	
 		<script>			
 			$(document).ready(function() {
-				$('#res').html(parser($('#calc').val()));
+				$('#res').html(parser.parse($('#calc').val()));
 				
 				$('#calc').on('change', function() {
-					$('#res').html(parser($(this).val()));
+					$('#res').html(parser.parse($(this).val()));
 				});
 			});
 		</script>
